Add Fix Shell Access

--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -108,6 +108,20 @@ jobs:
             sudo usermod -s /bin/bash ${{ secrets.USERNAME }}
 
 
+      - name: Fix Shell Access
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.PROXMOX_VM_TAILSCALE_IP }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            #!/bin/bash
+            set -e
+            
+            sudo usermod -s /bin/bash kube
+            echo "✅ Shell Access Restored"
+
+
       # - name: Install ArgoCD
       #   uses: appleboy/ssh-action@master
       #   with:
