--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -56,9 +56,9 @@ jobs:
               hosts:
                 node1:
                   ansible_connection: local
-                  ansible_host: 127.0.0.1
-                  ip: 127.0.0.1
-                  access_ip: 127.0.0.1
+                  ansible_host: 127.0.0.1       # localhost (Ansible이 로컬에서 실행)
+                  ip: ${{ secrets.PROXMOX_VM_TAILSCALE_IP }}
+                  access_ip: ${{ secrets.PROXMOX_VM_TAILSCALE_IP }}
               children:
                 kube_control_plane:
                   hosts:
