--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -17,7 +17,7 @@ jobs:
         uses: tailscale/github-action@v2
         with:
           authkey: ${{ secrets.TAILSCALE_AUTH_KEY }}
-          version: latest
+          version: 1.92.5
 
       - name: Setup K8s with Kubespray
         uses: appleboy/ssh-action@master
