--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup K8s with Kubespray
         uses: appleboy/ssh-action@master
         env:
-          KUBE_VERSION": "1.31.6"
+          KUBE_VERSION: "1.31.6"
         with:
           host: ${{ secrets.PROXMOX_VM_TAILSCALE_IP }}
           username: ${{ secrets.FIRST_USERNAME }}
@@ -35,24 +35,34 @@ jobs:
             #!/bin/bash
             set -e
 
-            echo "=== Complete cleanup ==="
-            
-            # 포트 강제 해제
+            echo "🔍 Complete cleanup"
+
+            # 1️⃣ 포트 해제
             sudo fuser -k 6443/tcp 2>/dev/null || true
             sudo fuser -k 10259/tcp 2>/dev/null || true
             sudo fuser -k 10257/tcp 2>/dev/null || true
-
-            # kubeadm reset
-            sudo kubeadm reset -f --cri-socket=/run/containerd/containerd.sock || true
-
-            # etcd 정리
+            
+            # 2️⃣ etcd 먼저 정리 (kubeadm reset 전)
+            sudo systemctl stop etcd || true
             sudo rm -rf /var/lib/etcd/*
-            sudo systemctl restart etcd || true
+            sudo systemctl start etcd
+            sleep 3
             
-            # sleep으로 안정화
-            sleep 5
+            # 3️⃣ 이제 kubeadm reset 실행
+            sudo kubeadm reset -f --cri-socket unix:///run/containerd/containerd.sock || true
             
-            echo "=== K8s Setup with Kubespray ==="            
+            # 4️⃣ kubelet 정리
+            sudo systemctl stop kubelet || true
+            sudo rm -rf /var/lib/kubelet/*
+            sleep 2
+            
+            # 5️⃣ Kubespray 진행
+            cd /tmp/kubespray
+            ansible-playbook -i inventory/mycluster/hosts.yaml \
+              --become \
+              cluster.yml
+            
+            echo "🔍 K8s Setup with Kubespray"            
             sudo apt-get update
             sudo apt-get install -y python3-pip python3-venv git
             
@@ -111,7 +121,7 @@ jobs:
             echo "🔍 Before ansible-playbook"
             ansible-playbook -i inventory/mycluster/hosts.yaml \
             --become \
-            -e "kube_version=$KUBE_VERSION" \
+            -e "kube_version=$KUBE_VERSION \
             -e "ansible_timeout=300" \
             -e "ansible_connection_timeout=60" \
             cluster.yml
