--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -17,10 +17,11 @@ jobs:
       - name: Connect to Tailscale
         uses: tailscale/github-action@v2
         with:
-          oauth-client-id: ${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}
-          oauth-secret: ${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}
           version: 1.94.1
-          tags: ${{ secrets.TAILSCALE_AUTH_TAGS }}
+          authkey: ${{ secrets.TAILSCALE_AUTH_KEY }}
+          # oauth-client-id: ${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}
+          # oauth-secret: ${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}
+          # tags: ${{ secrets.TAILSCALE_AUTH_TAGS }}
 
 
       - name: Setup K8s with Kubespray
