--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -83,7 +83,7 @@ jobs:
             cp -rfp inventory/sample inventory/mycluster
             
             echo "8️⃣ Before k8s cluster"
-            cat > inventory/mycluster/hosts.yaml <<HOSTS_EOF
+            cat > inventory/mycluster/hosts.yaml <<'HOSTS_EOF'
             all:
               hosts:
                 ${{ secrets.USERNAME }}:
@@ -107,7 +107,8 @@ jobs:
                     kube_node:
             HOSTS_EOF
             
-            cat > inventory/mycluster/group_vars/all/all.yml <<VARS_EOF
+            echo "9️⃣ group_vars/all/all.yml"
+            cat > inventory/mycluster/group_vars/all/all.yml <<'VARS_EOF'
             kube_version: $KUBE_VERSION
             container_manager: containerd
             dns_mode: coredns
@@ -117,10 +118,10 @@ jobs:
             kube_apiserver_bind_address: "0.0.0.0"
             VARS_EOF
             
-            echo "9️⃣ Before ansible-playbook"
+            echo "🔟 ansible-playbook 실행"
             ansible-playbook -i inventory/mycluster/hosts.yaml \
             --become \
-            -e "kube_version=$KUBE_VERSION \
+            -e "kube_version=$KUBE_VERSION" \
             -e "ansible_timeout=300" \
             -e "ansible_connection_timeout=60" \
             cluster.yml
