--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -82,7 +82,7 @@ jobs:
             cp -rfp inventory/sample inventory/mycluster
             
             echo "8️⃣ Before k8s cluster"
-            cat > inventory/mycluster/hosts.yaml <<'HOSTS_EOF'
+            cat > inventory/mycluster/hosts.yaml <<HOSTS_EOF
             all:
               hosts:
                 ${{ secrets.USERNAME }}:
@@ -107,7 +107,7 @@ jobs:
             HOSTS_EOF
             
             echo "9️⃣ group_vars/all/all.yml"
-            cat > inventory/mycluster/group_vars/all/all.yml <<'VARS_EOF'
+            cat > inventory/mycluster/group_vars/all/all.yml <<VARS_EOF
             kube_version: $KUBE_VERSION
             container_manager: containerd
             dns_mode: coredns
